<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_marginHorizontal="20dp"
    android:gravity="center">

    <Button
        android:id="@+id/btnBluetoothSet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtActivateBluetooth"
        android:onClick="changeBluetooth"
        android:layout_marginVertical="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="5dp">
        <TextView
            android:id="@+id/txtPairedDevices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtPariedDevices"/>
        <Spinner
            android:id="@+id/spinPairedDevices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"></Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/btnBluetoothConnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtConnectBluetooth"
        android:onClick="connectBluetoothDevice"
        android:layout_marginVertical="5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtOn"
            android:onClick="bluetoothSendOn"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txtOff"
            android:onClick="bluetoothSendOff"/>

    </LinearLayout>



</LinearLayout>